# books

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2025-01-29-210820_create_users/: up.sql
backend/migrations/2025-02-09-201831_create_shelves/: down.sql  up.sql
backend/migrations/2025-02-16-154832_create_books/: up.sql
backend/migrations/2025-03-01-220618_create_readings/: down.sql  up.sql
backend/src/: auth.rs  books.rs  db.rs  goodreads_importer.rs  main.rs  models.rs  readings.rs  schema.rs  shelves.rs  types.rs  users.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.vue
frontend/src/api/: client.ts  config.ts  googleBooksApi.ts
frontend/src/components/: AddToShelfPopup.vue  CreateShelfComponent.vue  CreateShelfModal.vue  PageContainer.vue  StartReadingModal.vue  Toast.vue  TrackProgressModal.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: BookDetailView.vue  HomeView.vue  LibraryView.vue  LoginView.vue  ProfileView.vue  ReadingDetailView.vue  RegisterView.vue  SearchDetailView.vue  SearchView.vue  ShelfDetailView.vue
