[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
diesel = { version = "2.2.8", features = ["postgres", "uuid", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
uuid = { version = "1.15.1", features = ["v4"] }
argonautica = "0.2.0"
chrono = "0.4.40"
